--- a/templates/layout/main.html
+++ b/templates/layout/main.html
@@ -8,7 +8,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ title }}</title>
         <meta name="description" content="ITP DWD Example Site using templates">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
         <!-- Get Font from Google http://www.google.com/webfonts -->
@@ -23,13 +22,14 @@
         <![endif]-->
         <div class="container">
 
-            <h1 class="pageheader">
+            <h2 class="pageheader">
                 <a href="/">Which one is a butt?</a>
-            </h1>
+            </h2>
 
 
-
+			<div class="contentwrapper">
             {% block body %}{% endblock %}
+			</div>
 
 
             <footer>
