--- a/templates/main.html
+++ b/templates/main.html
@@ -25,7 +25,7 @@
 		{% if user == None %}
 		<a href="/login">login</a>
 		{% else %}
-		<p>You are logged in as {{user}}</p>
+		<p>You are logged in as <b>{{user}}</b></p>
 		<a href="/logout">logout</a>
 		{% endif %}
 	</div>
